# panson

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  app.ipynb  experiments.ipynb  framework-tutorial.ipynb  framework.ipynb  mockup.ipynb  openface.ipynb  prototype.ipynb  pyproject.toml  requirements.txt  ruff.toml  tests.ipynb
examples/facial-feature-sonification/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  non-realtime.ipynb  openface.ipynb  panson  requirements.txt  tests.ipynb
examples/facial-feature-sonification/samples/: ATTRIBUTION.md  ATTRIBUTION.txt
panson/: __init__.py  audio_players.py  data_gens.py  data_players.py  feature_displays.py  live_features.py  magics.py  preprocessors.py  requirements.txt  sonification.py  streams.py  video_players.py  videoviewer.py  views.py  widget_parameters.py
src/: sonification.py  vcr_gui_pipe.py
src/panson/: __init__.py  audio_players.py  data_players.py  feature_displays.py  preprocessors.py  sonification.py  streams.py  video_players.py  views.py  widget_parameters.py
